--- a/package.json
+++ b/package.json
@@ -1,14 +1,21 @@
 {
   "name": "market-mcp",
-  "version": "1.0.0",
-  "description": "金融股票数据查询MCP服务器",
+  "version": "2.0.1",
+  "description": "Market MCP v2.0.0 - 专业的金融股票数据查询工具，基于IPO3.com数据源，提供14个MCP工具和2个智能分析助手",
   "main": "dist/index.js",
   "type": "module",
   "scripts": {
     "build": "tsc",
     "start": "node dist/index.js",
     "dev": "tsx src/index.ts",
-    "test": "jest"
+    "test": "npm run test:basic && npm run test:full",
+    "test:basic": "npm run build && node test/test-simple.js",
+    "test:full": "npm run build && node test/test-final.js",
+    "test:demo": "npm run build && node test/test-mcp-demo.js",
+    "test:quick": "npm run build && node test/test-quick.js",
+    "clean": "rm -rf dist",
+    "lint": "echo 'Linting not configured yet'",
+    "format": "echo 'Formatting not configured yet'"
   },
   "keywords": [
     "mcp",
@@ -24,8 +31,8 @@
     "cheerio": "^1.1.0"
   },
   "devDependencies": {
-    "@types/cheerio": "^0.22.35",
     "@types/jest": "^29.0.0",
+    "@types/jquery": "^3.5.33",
     "@types/node": "^20.0.0",
     "jest": "^29.0.0",
     "tsx": "^4.0.0",
