feat: 完成基于akshare的MCP金融数据服务
- 创建完整的MCP服务器架构
- 实现包括A股、B股、创业板、科创板、美股等市场数据查询
- 支持历史行情、个股信息、分时数据等功能
- 包含完整的测试框架和文档
- 支持参数限制和数据处理

主要功能模块：
- 实时行情数据（A股、创业板、科创板、B股、美股）
- 历史K线数据（日、周、月线，支持复权）
- 个股基本信息查询
- 分时数据获取
- A+H股比价数据
- 同行估值比较
- 股市日历事件

技术栈：
- Node.js + TypeScript
- MCP SDK
- Python akshare库
- 支持ES模块

--- a/package.json
+++ b/package.json
@@ -1,40 +1,24 @@
 {
-  "name": "market-mcp",
-  "version": "2.0.1",
-  "description": "Market MCP v2.0.0 - 专业的金融股票数据查询工具，基于IPO3.com数据源，提供14个MCP工具和2个智能分析助手",
+  "name": "akshare-mcp-server",
+  "version": "1.0.0",
+  "description": "基于akshare的金融数据MCP服务器，提供股票、市场行情等金融数据查询功能",
   "main": "dist/index.js",
-  "type": "commonjs",
+  "type": "module",
   "scripts": {
     "build": "tsc",
     "start": "node dist/index.js",
-    "dev": "tsx src/index.ts",
-    "test": "npm run test:basic && npm run test:full",
-    "test:basic": "npm run build && node test/test-simple.js",
-    "test:full": "npm run build && node test/test-final.js",
-    "test:demo": "npm run build && node test/test-mcp-demo.js",
-    "test:quick": "npm run build && node test/test-quick.js",
-    "clean": "rm -rf dist",
-    "lint": "echo 'Linting not configured yet'",
-    "format": "echo 'Formatting not configured yet'"
+    "dev": "tsx watch src/index.ts",
+    "test": "node test/mcp-test.js"
   },
-  "keywords": [
-    "mcp",
-    "stock",
-    "finance",
-    "api"
-  ],
-  "author": "",
+  "keywords": ["akshare", "mcp", "金融数据", "股票", "市场行情"],
+  "author": "Market MCP Team",
   "license": "MIT",
   "dependencies": {
     "@modelcontextprotocol/sdk": "^1.0.0",
-    "axios": "^1.13.2",
-    "cheerio": "^1.1.0"
+    "python-shell": "^5.0.0"
   },
   "devDependencies": {
-    "@types/jest": "^29.0.0",
-    "@types/jquery": "^3.5.33",
     "@types/node": "^20.0.0",
-    "jest": "^29.0.0",
     "tsx": "^4.0.0",
     "typescript": "^5.0.0"
   }
